--- a/style/style.css
+++ b/style/style.css
@@ -1,10 +1,29 @@
+@import url("https://fonts.googleapis.com/css2?family=Spartan&display=swap");
 html {
   box-sizing: border-box;
 }
 
 body {
   margin: 0;
-  font-family: "Work Sans", sans-serif;
+  /* font-family: "Work Sans", sans-serif; */
+  font-family: "Spartan", sans-serif;
+  background-image: linear-gradient(
+    to top,
+    #040b16,
+    #020a1a,
+    #00091e,
+    #000722,
+    #010526
+  );
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+p {
+  color: #fff;
 }
 
 .container {
